@@ -1,6 +1,7 @@
 package base.storage.snapshots;
 
 import base.domain.bid.BidType;
+import base.domain.card.Suit;
 import base.domain.snapshots.RoundSnapshot;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
@@ -28,13 +29,15 @@ class RoundSnapshotTest {
         void testValidNormalBid() {
             assertDoesNotThrow(() -> {
                 new RoundSnapshot(
+                        List.of("1", "2", "3", "4"),
                         BidType.SOLO,
                         0,
                         List.of(0),
                         13,
                         List.of(),
                         1,
-                        getValidDeltas()
+                        getValidDeltas(),
+                        Suit.HEARTS
                 );
             });
         }
@@ -44,13 +47,15 @@ class RoundSnapshotTest {
         void testValidMiserieBid() {
             assertDoesNotThrow(() -> {
                 new RoundSnapshot(
+                        List.of("1", "2", "3", "4"),
                         BidType.MISERIE,
                         2,
                         List.of(1, 2),
                         -1,
                         List.of(2),
                         2,
-                        Arrays.asList(-30, 15, 15, 0)
+                        Arrays.asList(-30, 15, 15, 0),
+                        Suit.HEARTS
                 );
             });
         }
@@ -59,13 +64,15 @@ class RoundSnapshotTest {
         @DisplayName("Null miserieWinnerIndices gracefully defaults to empty list")
         void testNullMiserieWinnersDefaultsToEmpty() {
             RoundSnapshot snapshot = new RoundSnapshot(
+                    List.of("1", "2", "3", "4"),
                     BidType.SOLO,
                     0,
                     List.of(0),
                     5,
                     null, // Passing null here
                     1,
-                    getValidDeltas()
+                    getValidDeltas(),
+                    Suit.HEARTS
             );
 
             assertNotNull(snapshot.miserieWinnerIndices());
@@ -81,7 +88,8 @@ class RoundSnapshotTest {
         @DisplayName("Rejects null bidType")
         void testNullBidType() {
             assertThrows(IllegalArgumentException.class, () ->
-                    new RoundSnapshot(null, 0, List.of(0), 5, List.of(), 1, getValidDeltas())
+                    new RoundSnapshot(
+                            List.of("1", "2", "3", "4"),null, 0, List.of(0), 5, List.of(), 1, getValidDeltas(), Suit.HEARTS)
             );
         }
 
@@ -89,10 +97,12 @@ class RoundSnapshotTest {
         @DisplayName("Rejects out of bounds bidderIndex")
         void testInvalidBidderIndex() {
             assertThrows(IllegalArgumentException.class, () ->
-                    new RoundSnapshot(BidType.SOLO, -1, List.of(0), 5, List.of(), 1, getValidDeltas())
+                    new RoundSnapshot(
+                            List.of("1", "2", "3", "4"),BidType.SOLO, -1, List.of(0), 5, List.of(), 1, getValidDeltas(), Suit.HEARTS)
             );
             assertThrows(IllegalArgumentException.class, () ->
-                    new RoundSnapshot(BidType.SOLO, 4, List.of(0), 5, List.of(), 1, getValidDeltas())
+                    new RoundSnapshot(
+                            List.of("1", "2", "3", "4"),BidType.SOLO, 4, List.of(0), 5, List.of(), 1, getValidDeltas(), Suit.HEARTS)
             );
         }
 
@@ -100,10 +110,12 @@ class RoundSnapshotTest {
         @DisplayName("Rejects invalid multipliers")
         void testInvalidMultiplier() {
             assertThrows(IllegalArgumentException.class, () ->
-                    new RoundSnapshot(BidType.SOLO, 0, List.of(0), 5, List.of(), 0, getValidDeltas())
+                    new RoundSnapshot(
+                            List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(0), 5, List.of(), 0, getValidDeltas(), Suit.HEARTS)
             );
             assertThrows(IllegalArgumentException.class, () ->
-                    new RoundSnapshot(BidType.SOLO, 0, List.of(0), 5, List.of(), -2, getValidDeltas())
+                    new RoundSnapshot(
+                            List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(0), 5, List.of(), -2, getValidDeltas(), Suit.HEARTS)
             );
         }
 
@@ -111,10 +123,12 @@ class RoundSnapshotTest {
         @DisplayName("Rejects out of bounds tricksWon")
         void testInvalidTricksWon() {
             assertThrows(IllegalArgumentException.class, () ->
-                    new RoundSnapshot(BidType.SOLO, 0, List.of(0), -2, List.of(), 1, getValidDeltas())
+                    new RoundSnapshot(
+                            List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(0), -2, List.of(), 1, getValidDeltas(), Suit.HEARTS)
             );
             assertThrows(IllegalArgumentException.class, () ->
-                    new RoundSnapshot(BidType.SOLO, 0, List.of(0), 14, List.of(), 1, getValidDeltas())
+                    new RoundSnapshot(
+                            List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(0), 14, List.of(), 1, getValidDeltas(), Suit.HEARTS)
             );
         }
     }
@@ -128,22 +142,26 @@ class RoundSnapshotTest {
         void testInvalidParticipantIndices() {
             // Null list
             assertThrows(IllegalArgumentException.class, () ->
-                    new RoundSnapshot(BidType.SOLO, 0, null, 5, List.of(), 1, getValidDeltas())
+                    new RoundSnapshot(
+                            List.of("1", "2", "3", "4"),BidType.SOLO, 0, null, 5, List.of(), 1, getValidDeltas(), Suit.HEARTS)
             );
 
             // Contains null element
             List<Integer> listWithNull = new ArrayList<>();
             listWithNull.add(null);
             assertThrows(IllegalArgumentException.class, () ->
-                    new RoundSnapshot(BidType.SOLO, 0, listWithNull, 5, List.of(), 1, getValidDeltas())
+                    new RoundSnapshot(
+                            List.of("1", "2", "3", "4"),BidType.SOLO, 0, listWithNull, 5, List.of(), 1, getValidDeltas(), Suit.HEARTS)
             );
 
             // Contains out of bounds indices
             assertThrows(IllegalArgumentException.class, () ->
-                    new RoundSnapshot(BidType.SOLO, 0, List.of(-1), 5, List.of(), 1, getValidDeltas())
+                    new RoundSnapshot(
+                            List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(-1), 5, List.of(), 1, getValidDeltas(), Suit.HEARTS)
             );
             assertThrows(IllegalArgumentException.class, () ->
-                    new RoundSnapshot(BidType.SOLO, 0, List.of(4), 5, List.of(), 1, getValidDeltas())
+                    new RoundSnapshot(
+                            List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(4), 5, List.of(), 1, getValidDeltas(), Suit.HEARTS)
             );
         }
 
@@ -154,17 +172,20 @@ class RoundSnapshotTest {
             List<Integer> listWithNull = new ArrayList<>();
             listWithNull.add(null);
             assertThrows(IllegalArgumentException.class, () ->
-                    new RoundSnapshot(BidType.SOLO, 0, List.of(0), 5, listWithNull, 1, getValidDeltas())
+                    new RoundSnapshot(
+                            List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(0), 5, listWithNull, 1, getValidDeltas(), Suit.HEARTS)
             );
 
             // Contains out of bounds index (too low)
             assertThrows(IllegalArgumentException.class, () ->
-                    new RoundSnapshot(BidType.SOLO, 0, List.of(0), 5, List.of(-1), 1, getValidDeltas())
+                    new RoundSnapshot(
+                            List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(0), 5, List.of(-1), 1, getValidDeltas(), Suit.HEARTS)
             );
 
             // Contains out of bounds index (too high) - THIS WAS THE MISSING BRANCH!
             assertThrows(IllegalArgumentException.class, () ->
-                    new RoundSnapshot(BidType.SOLO, 0, List.of(0, 1, 2, 3), 5, List.of(4), 1, getValidDeltas())
+                    new RoundSnapshot(
+                            List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(0, 1, 2, 3), 5, List.of(4), 1, getValidDeltas(), Suit.HEARTS)
             );
         }
 
@@ -172,7 +193,8 @@ class RoundSnapshotTest {
         @DisplayName("Rejects miserie winners that are not participants")
         void testMiserieWinnersMustBeParticipants() {
             assertThrows(IllegalArgumentException.class, () ->
-                    new RoundSnapshot(BidType.MISERIE, 0, List.of(0, 1), -1, List.of(2), 1, getValidDeltas())
+                    new RoundSnapshot(
+                            List.of("1", "2", "3", "4"),BidType.MISERIE, 0, List.of(0, 1), -1, List.of(2), 1, getValidDeltas(), Suit.HEARTS)
             );
         }
     }
@@ -185,13 +207,16 @@ class RoundSnapshotTest {
         @DisplayName("Rejects null or incorrectly sized scoreDeltas")
         void testInvalidScoreDeltasSize() {
             assertThrows(IllegalArgumentException.class, () ->
-                    new RoundSnapshot(BidType.SOLO, 0, List.of(0), 5, List.of(), 1, null)
+                    new RoundSnapshot(
+                            List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(0), 5, List.of(), 1, null, Suit.HEARTS)
             );
             assertThrows(IllegalArgumentException.class, () ->
-                    new RoundSnapshot(BidType.SOLO, 0, List.of(0), 5, List.of(), 1, List.of(0, 0, 0)) // Size 3
+                    new RoundSnapshot(
+                            List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(0), 5, List.of(), 1, List.of(0, 0, 0), Suit.HEARTS) // Size 3
             );
             assertThrows(IllegalArgumentException.class, () ->
-                    new RoundSnapshot(BidType.SOLO, 0, List.of(0), 5, List.of(), 1, List.of(0, 0, 0, 0, 0)) // Size 5
+                    new RoundSnapshot(
+                            List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(0), 5, List.of(), 1, List.of(0, 0, 0, 0, 0), Suit.HEARTS) // Size 5
             );
         }
 
@@ -200,7 +225,8 @@ class RoundSnapshotTest {
         void testNullInsideScoreDeltas() {
             List<Integer> deltasWithNull = Arrays.asList(90, -30, null, -60);
             assertThrows(IllegalArgumentException.class, () ->
-                    new RoundSnapshot(BidType.SOLO, 0, List.of(0), 5, List.of(), 1, deltasWithNull)
+                    new RoundSnapshot(
+                            List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(0), 5, List.of(), 1, deltasWithNull, Suit.HEARTS)
             );
         }
 
@@ -209,7 +235,8 @@ class RoundSnapshotTest {
         void testNonZeroSumDeltas() {
             List<Integer> invalidDeltas = Arrays.asList(90, -30, -30, -20); // Sums to +10
             assertThrows(IllegalArgumentException.class, () ->
-                    new RoundSnapshot(BidType.SOLO, 0, List.of(0), 5, List.of(), 1, invalidDeltas)
+                    new RoundSnapshot(
+                            List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(0), 5, List.of(), 1, invalidDeltas, Suit.HEARTS)
             );
         }
     }
@@ -222,17 +249,19 @@ class RoundSnapshotTest {
         @DisplayName("Ensures internal lists are deep copied and immutable")
         void testListImmutability() {
             List<Integer> participants = new ArrayList<>(Arrays.asList(0, 1));
-            List<Integer> miserieWinners = new ArrayList<>(Arrays.asList(1));
+            List<Integer> miserieWinners = new ArrayList<>(List.of(1));
             List<Integer> deltas = new ArrayList<>(Arrays.asList(30, -10, -10, -10));
 
             RoundSnapshot snapshot = new RoundSnapshot(
+                    List.of("1", "2", "3", "4"),
                     BidType.MISERIE,
                     0,
                     participants,
                     -1,
                     miserieWinners,
                     1,
-                    deltas
+                    deltas,
+                    Suit.HEARTS
             );
 
             // Attempt to mutate original lists
@@ -243,7 +272,7 @@ class RoundSnapshotTest {
             // Verify the snapshot remained unchanged
             assertEquals(2, snapshot.participantIndices().size(), "Participant list should be isolated from external changes");
             assertEquals(1, snapshot.miserieWinnerIndices().size(), "Miserie winner list should be isolated from external changes");
-            assertEquals(30, snapshot.scoreDeltas().get(0), "Score deltas should be isolated from external changes");
+            assertEquals(30, snapshot.scoreDeltas().getFirst(), "Score deltas should be isolated from external changes");
 
             // Attempt to mutate the snapshot's lists directly
             assertThrows(UnsupportedOperationException.class, () -> snapshot.participantIndices().add(3));
